# Autonomouscar

./: .gitignore  README.md  TODO
CAO/: Base voiture test v8.stl  Base voiture troues test v9.stl  boitier bas dwm1001 v3.stl  boitier bas dwm1001 v4.stl  boitier bas dwm1001 v5.stl  boitier bas dwm1001 v7.stl  boitier bas dwm1001 v8.stl  boitier haut v10.stl  boitier haut v11.stl  boitier haut v4.stl  boitier haut v8.stl
Electronic/: README.md
Programm/: README.md
Programm/Robot_initialization/: main  main.cpp  output_reader  output_reader.cpp  server.py  uart_test.py
Programm/autofollow_ws/install/: local_setup.sh  setup.sh
Programm/autofollow_ws/install/autofollow_lidar_detection/share/autofollow_lidar_detection/: package.bash  package.dsv  package.sh  package.zsh
Programm/autofollow_ws/install/rplidar_ros/lib/rplidar_ros/: rplidar_client  rplidar_composition  rplidar_node
Programm/autofollow_ws/install/rplidar_ros/share/ament_index/resource_index/package_run_dependencies/: rplidar_ros
Programm/autofollow_ws/install/rplidar_ros/share/ament_index/resource_index/parent_prefix_path/: rplidar_ros
Programm/autofollow_ws/install/rplidar_ros/share/rplidar_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
Programm/autofollow_ws/install/rplidar_ros/share/rplidar_ros/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  rplidar_rosConfig-version.cmake  rplidar_rosConfig.cmake
Programm/autofollow_ws/install/rplidar_ros/share/rplidar_ros/environment/: ament_prefix_path.dsv  path.dsv
Programm/autofollow_ws/install/rplidar_ros/share/rplidar_ros/launch/: rplidar_a1_launch.py  rplidar_a2m12_launch.py  rplidar_a2m7_launch.py  rplidar_a2m8_launch.py  rplidar_a3_launch.py  rplidar_c1_launch.py  rplidar_s1_launch.py  rplidar_s1_tcp_launch.py  rplidar_s2_launch.py  rplidar_s2e_launch.py  rplidar_s3_launch.py  rplidar_t1_launch.py  view_rplidar_a1_launch.py  view_rplidar_a2m12_launch.py  view_rplidar_a2m7_launch.py  view_rplidar_a2m8_launch.py  view_rplidar_a3_launch.py  view_rplidar_c1_launch.py  view_rplidar_s1_launch.py  view_rplidar_s1_tcp_launch.py  view_rplidar_s2_launch.py  view_rplidar_s2e_launch.py  view_rplidar_s3_launch.py  view_rplidar_t1_launch.py
Programm/autofollow_ws/install/rplidar_ros/share/rplidar_ros/rviz/: rplidar_ros.rviz
Programm/autofollow_ws/log/: latest_build
Programm/autofollow_ws/src/autofollow_lidar_detection/: package.xml  setup.cfg  setup.py
install/: local_setup.sh  setup.sh
install/autofollow_lidar_detection/share/autofollow_lidar_detection/: package.dsv  package.ps1  package.sh
install/robot/lib/robot/: encoders  encoders_publisher  encoders_subscriber  listener  main  main_test  motor_subscriber  motors  position_publisher  position_reader  robot_controller
install/robot/share/ament_index/resource_index/package_run_dependencies/: robot
install/robot/share/ament_index/resource_index/parent_prefix_path/: robot
install/robot/share/robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/robot/share/robot/cmake/: robotConfig-version.cmake  robotConfig.cmake
install/robot/share/robot/environment/: ament_prefix_path.dsv  path.dsv
install/robot/share/robot/launch/: launch.py
log/: latest_build
scripts/: make_encoders_work.sh  make_rpi4_work.sh  publish_on_cmd_vel.sh
src/autoflow_sim/: CMakeLists.txt  README.md  package.xml
src/autoflow_sim/config/: config_bot.rviz  gz_bridge.yaml  view_bot_1.rviz
src/autoflow_sim/description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core_v2.xacro
src/autoflow_sim/launch/: robot.launch.py  rsp.launch.py
src/autoflow_sim/worlds/: obstacles.world
src/robot/: CMakeLists.txt  package.xml
src/robot/config/: config.yaml
src/robot/include/robot/: DWM1001_reader.h  MPU6050.h  encoders.h  encoders_publisher.h  encoders_subscriber.h  motor.h  motor_subscriber.h  robot_controller.h  rpi4.h
src/robot/launch/: launch.py
src/robot/src/: DWM1001_reader.cpp  MPU6050.cpp  encoders.cpp  encoders_backup.cpp  encoders_publisher.cpp  encoders_subscriber.cpp  main.cpp  motor.cpp  motor_subscriber.cpp  raspberry_pico_w_server.py  robot_controller.cpp  rpi4.cpp
src/robot/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
